working with carousel component

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,38 @@ body {
   box-shadow: rgb(15 16 17) 100px 0px 50px -30px inset;
 }
 
+/* HERO HOMEPAGE */
 .hero::before {
   background: linear-gradient(0deg, #141414, hsla(0, 0%, 8%, 0.5));
   content: '';
   inset: 0;
   position: absolute;
+}
+
+/* CAROUSEL HOMEPAGE */
+.card {
+  width: 200px !important;
+  height: 280px;
+  margin-left: 10px;
+  cursor: grab;
+  position: relative;
+}
+.card:hover {
+  filter: brightness(50%);
+}
+
+.card:hover h3 {
+  opacity: 1;
+}
+.card h3 {
+  opacity: 0;
+}
+
+.card:focus,
+.card:active {
+  outline: none;
+}
+
+.slick-slide {
+  width: 220px !important;
 }
