--- a/src/index.css
+++ b/src/index.css
@@ -20,29 +20,28 @@ body {
 }
 
 /* CAROUSEL HOMEPAGE */
-.card {
-  width: 200px !important;
+
+.carousel__card {
+  width: 95% !important;
   height: 280px;
-  margin-left: 10px;
   cursor: grab;
   position: relative;
+  /* overflow: hidden; */
 }
-.card:hover {
+.carousel__card:hover img {
   filter: brightness(50%);
+  transform: scale(0.95);
 }
 
-.card:hover h3 {
+.carousel__card:hover h3 {
   opacity: 1;
+  color: #fff;
 }
-.card h3 {
+.carousel__card h3 {
   opacity: 0;
 }
 
-.card:focus,
-.card:active {
+.carousel__card:focus,
+.carousel__card:active {
   outline: none;
-}
-
-.slick-slide {
-  width: 220px !important;
 }
