implementing section with premiere games

--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,21 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-.layout {
+.shadow-left {
   box-shadow: rgb(15 16 17) 100px 0px 50px -30px inset;
 }
 
 /* HERO HOMEPAGE */
 .hero::before {
   background: linear-gradient(0deg, #141414, hsla(0, 0%, 8%, 0.5));
+  content: '';
+  inset: 0;
+  position: absolute;
+}
+
+/* PREMIRERE HOMEPAGE */
+.premiere::before {
+  background: linear-gradient(180deg, #141414, hsla(0, 0%, 8%, 0.5));
   content: '';
   inset: 0;
   position: absolute;
