--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,19 @@ body {
 .carousel__card:active {
   outline: none;
 }
+
+/* h1 page */
+
+@media (min-width: 640px) {
+  .fancy-undeline {
+    background-image: linear-gradient(120deg, #dc1414, #781010 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.3em;
+    background-position: 0 80%;
+    transition: background-size 0.25s ease-in;
+  }
+
+  .fancy-undeline:hover {
+    background-size: 100% 88% !important;
+  }
+}
