--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,7 @@ body {
   outline: none;
 }
 
-/* h1 page */
-
+/* H1 PAGE */
 @media (min-width: 640px) {
   .fancy-undeline {
     background-image: linear-gradient(120deg, #dc1414, #781010 100%);
