--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,9 @@ body {
 }
 
 .carousel__card:focus,
-.carousel__card:active {
+.carousel__card:active,
+.gallery_card:focus,
+.gallery_card.active {
   outline: none;
 }
 
@@ -73,4 +75,3 @@ body {
 .gallery_card {
   width: 99% !important;
 }
-
