--- a/src/index.css
+++ b/src/index.css
@@ -77,10 +77,7 @@ body {
   height: 220px;
 }
 
-/* Thumbnails Page */
-.thumbnail_card {
-  width: 90% !important;
-}
+/* Fullscreen Gallery */
 
 .slick-prev::before,
 .slick-next::before {
@@ -92,4 +89,15 @@ body {
 }
 .slick-next {
   right: -65px !important;
+}
+
+.thumbnail .slick-slide {
+  width: 230px !important; /* tu możesz ustawić inny rozmiar */
+  margin: 0 10px !important;
+}
+
+.thumbnail .slick-track {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
