--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,19 @@ body {
 .dlc__carousel .slick-track {
   display: flex;
 }
+.wishlist-title {
+  writing-mode: vertical-lr;
+  -webkit-writing-mode: vertical-lr;
+  -ms-writing-mode: vertical-lr;
+}
+.wishlist-title::after {
+  content: '';
+  display: block;
+  width: 2px;
+  height: 50%;
+  margin: 0 auto;
+  background-image: linear-gradient(120deg, #dc1414, #781010 100%);
+}
 
 @media (min-width: 640px) {
   .fancy-undeline {
