--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,10 @@ body {
   background-image: linear-gradient(120deg, #dc1414, #781010 100%);
 }
 
+.borderClearing {
+  border: 1px solid rgb(21 128 61) !important;
+}
+
 @media (min-width: 640px) {
   .fancy-undeline {
     background-image: linear-gradient(120deg, #dc1414, #781010 100%);
